<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subscriber.Subscriber">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="#ECEBEB">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.pinupcircle.utility.customfonts.TextViewFontsMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="@string/subscriber_s_registration"
                    android:textColor="#434343"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="TODO"
                        android:src="@drawable/user_profile_pic" />

                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextSubscriberName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/name"
                        android:maxLines="1"
                        android:paddingStart="17dp"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextSubscriberAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/address"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/mobile_numbar"
                        android:maxLines="1"
                        android:paddingStart="14dp"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextLocality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/locality"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextCiy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/city"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextPinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/pin_zip_code"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                    <!-- ICON -->
                </RelativeLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1.5"
                android:padding="32dp">

                <ImageView
                    android:id="@+id/imgNext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/next" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:background="@drawable/buttom_backgound" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>