<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.businessServicesProvider.BusinessServiceProvider">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="#ECEBEB"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:weightSum="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.pinupcircle.utility.customfonts.TextViewFontsMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="Business Registration"
                    android:textColor="#434343"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="TODO"
                        android:id="@+id/serviceUploadImage"
                        android:onClick="onAddImageClick"
                        android:src="@drawable/user_profile_pic" />

                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceProviderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Name of your Business"
                        android:maxLines="1"
                        android:paddingStart="17dp"
                        android:inputType="textCapSentences"
                        android:paddingLeft="14dp"
                        android:maxLength="20"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceProviderMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Business Phone Number"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:paddingStart="14dp"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:maxLength="10"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                    <!-- ICON -->

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceProviderEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Business Email ID"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceProviderService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Service You Provided"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceProviderAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Business Address"
                        android:maxLines="1"

                        android:inputType="textPostalAddress"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:maxLength="25"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/city"
                        android:maxLength="16"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServicePinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/pin_zip_code"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:inputType="phone"
                        android:maxLength="6"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                    <!-- ICON -->
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="42dp"
                    android:background="@drawable/blue_border_rounded_cornwe">

                    <!-- INPUT -->
                    <com.pinupcircle.utility.customfonts.EditTextFontsRegular
                        android:id="@+id/editTextServiceState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/state"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingLeft="14dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:maxLength="20"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <!-- ICON -->
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/imgServiceNext"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:contentDescription="TODO"
                        android:onClick="onServiceRegistrationClick"
                        android:padding="0dp"
                        android:src="@drawable/next" />
                </FrameLayout>

                <com.pinupcircle.utility.customfonts.TextViewFontsMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text=""
                    android:textColor="#434343"
                    android:textSize="12sp" />
            </LinearLayout>


                      <!--  <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_alignParentBottom="true"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha="0.1"
                                android:background="@drawable/buttom_backgound" />

                        </LinearLayout>-->

        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>